<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">萌鸡日程(FxYubSoft)</string>
    <string name="title_home">首页</string>
    <string name="title_drink">菜单</string>
    <string name="title_shop">潮品</string>
    <string name="title_shopping">购物车</string>
    <string name="title_mine">我的</string>

    <string name="login_captcha_data_unexcepted">数据异常，请稍后重试</string>
    <string name="login_i_known">我知道了</string>
    <string name="login_phone_no_bind_phone_text">为了您的帐户安全，请绑定手机</string>
    <string name="login_phone_no_phone_hint">请输入手机号</string>
    <string name="login_phone_no_select_regin_text">选择国家/地区</string>
    <string name="login_phone_vertify_code_send">获取验证码</string>
    <string name="login_welcome_back">欢迎回来</string>

    <string name="hint_login_phone_regin_choose">请选择正确的国家/地区区号，否则将无法下单</string>
    <string name="hint_mine_login_view_scheme_accept">点击确定，即表示已阅读并同意《注册会员服务条款》</string>

    <string name="unit_bei">张</string>
    <string name="unit_of_pieces">张</string>
    <string name="unit_yuan">元</string>
    <string name="unit_zhang">张</string>
    <string name="account_balance">账户余额</string>
    <string name="mine_fragment_coffee_package">咖啡钱包</string>
    <string name="mine_fragment_coupons">优惠券</string>
    <string name="mine_fragment_giftcard">礼品卡</string>
    <string name="mine_gift_card_fill_balance">充入余额</string>

    <string name="tl.task.level1_desc" tools:ignore="ExtraTranslation">"【紧急&amp;重要】
（优先解决立即做）

工作危机
急迫的问题
有期限压力的计划"</string>
    <string name="tl.task.level2_desc" tools:ignore="ExtraTranslation">"【重要&amp;不紧急】
（制定计划去做）

发掘新机会
规划职业前程
防患于未然"</string>
    <string name="tl.task.level3_desc" tools:ignore="ExtraTranslation">"【紧急&amp;不重要】
（安排别人去做）

不速之客的到访
临时安排的工作
不必要的消息回复"</string>
    <string name="tl.task.level4_desc" tools:ignore="ExtraTranslation">"【不紧急&amp;不重要】
（尽量别做）

可做可不做的杂事
不必要的应酬
上网聊天玩游戏"</string>
    <string name="tl.task.not_urgency_importance" tools:ignore="ExtraTranslation">重要&amp;不紧急</string>
    <string name="tl.task.not_urgency_not_importance" tools:ignore="ExtraTranslation">不紧急&amp;不重要</string>
    <string name="tl.task.urgency_importance" tools:ignore="ExtraTranslation">紧急&amp;重要</string>
    <string name="tl.task.urgency_not_importance" tools:ignore="ExtraTranslation">紧急&amp;不重要</string>
    <string name="tl.todo"  tools:ignore="ExtraTranslation">待办项</string>
    <string name="tl.type.eat"  tools:ignore="ExtraTranslation">吃饭</string>
    <string name="tl.type.exercise"  tools:ignore="ExtraTranslation">运动</string>
    <string name="tl.type.goto"  tools:ignore="ExtraTranslation">路上</string>
    <string name="tl.type.hint.color_title" tools:ignore="ExtraTranslation">设置颜色</string>
    <string name="tl.type.hint.edit_title" tools:ignore="ExtraTranslation">设置类型</string>
    <string name="tl.type.hint.input_desc" tools:ignore="ExtraTranslation">请输入描述(上限20个字符)</string>
    <string name="tl.type.hint.input_name" tools:ignore="ExtraTranslation">请输入名称(上限6个字符)</string>
    <string name="tl.type.hoursework" tools:ignore="ExtraTranslation">家务</string>
    <string name="tl.type.job" tools:ignore="ExtraTranslation">工作</string>
    <string name="tl.type.learn" tools:ignore="ExtraTranslation">学习</string>
    <string name="tl.type.play" tools:ignore="ExtraTranslation">娱乐</string>
    <string name="tl.type.sleep" tools:ignore="ExtraTranslation">睡觉</string>
    <string name="tl.type.wash" tools:ignore="ExtraTranslation">洗漱</string>
</resources>
